--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 [
   {
     "product_code": "A",
-    "interface": {
+    "custom_interface": {
       "name": "A",
       "app_icon": {
         "logo_108x108": "https://images.unsplash.com/photo-1596854273338-cbf078ec7071?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80",
